# esp-rustc-abi-bug

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
component/: CMakeLists.txt  demo.c
src/: main.rs
