[package]
name = "esp-rustc-abi-bug"
version = "0.1.0"
authors = ["Roope Salmi <rpsalmi@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["component"]

[build-dependencies]
embuild = "0.30"
anyhow = "1"
